# welcome-app

./: Cargo.toml  build.rs
src/: main.rs  org.ultramarine.welcome.gschema.xml
src/resources/: resources.gresource.xml  welcome.cmb  welcome.ui  window.ui
src/window/: mainwindow.rs  mod.rs  page1.rs
